Added default config as a placeholder.
* Updated .gitignore to filter out the config.json.
* Added the config-default.json, which contains an example of the json config.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+
+# Config shouldn't be committed for security reasons.
+config.json
