Updated config file logic and added support for command line arguments to override default config file.
* Moved the config file around, so that by default it looks for it in /usr/local/etc/ohms-discord-bot.d/config.json
** This can be overriden via the new -c switch.

--- a/example-config.json
+++ b/example-config.json
@@ -4,6 +4,5 @@
     "token": "",
     "inviteID": "",
     "roleIDs": [ ],
-    "dumpRoleIDs": false,
-    "debug": false
+    "dumpRoleIDs": false
 }
