Corrected a bug where the incorrect api route was being used to get invite metadata.
* Updated the example-config.json with explanations.

* Added a new config option for the channel that the watched invite is associated with.

--- a/example-config.json
+++ b/example-config.json
@@ -1,7 +1,8 @@
 {
-    "guildID": "",
-    "projectID": "",
-    "token": "",
-    "inviteID": "",
-    "roleIDs": [ ]
+    "guildID": "", // Your server's ID.
+    "channelID": "", // The channel that your watched invite is associated with.
+    "projectID": "", // GCP project ID.
+    "token": "", // Discord app token.
+    "inviteID": "", // Discord invite ID.
+    "roleIDs": [ ] // An array of role IDs to give a new discord user that uses the watched invite code.
 }
